# kronox_rust_backend

./: .env  Cargo.toml  README.md
src/: main.rs
src/models/: db_structs.rs  mod.rs
src/routes/: catchers.rs  mod.rs  schedules.rs  users.rs
src/services/: mod.rs
src/services/mongo_connectors/: colors_connector.rs  mod.rs  schedule_connector.rs
src/utils/: enums.rs
