[package]
name = "kronox_rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
mongodb = "2.2.1"
dotenv = "0.15.0"
chrono = "0.4.19"
futures = "0.3.21"
rocket = { version = "0.5.0-rc.1", features = ["json"] }

